--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Webpack Tutorial</h1>
-    <script src="dist/bundle.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
